...
            <objects>
                <navigationController id="MGW-TJ-563" userLabel="Navigation Controller Recipe" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="1" title="Recipe" image="icons8-Ingredients List Filled-32" id="IBY-IB-p5c" userLabel="Recipe"/>
                    <navigationItem key="navigationItem" id="8bN-bJ-63r"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Fmx-dm-Vcw">
...
        <scene sceneID="7HZ-P0-nTu">
            <objects>
                <tableViewController id="neC-Q5-UfH" userLabel="Recipe Book" customClass="RecipeBookTableViewController" customModule="RecipeRack" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="dzr-bP-gBA">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                    <tabBarItem key="tabBarItem" title="Recipe Book" image="icons8-Ingredients List Filled-32" id="D4u-hu-AI0" userLabel="Recipe Book"/>
                    <navigationItem key="navigationItem" title="Recipe Book" id="U95-GM-m9Q" userLabel="Recipe Book">
                        <barButtonItem key="backBarButtonItem" title="Back" id="HL2-S0-qU6"/>
                    </navigationItem>
                </tableViewController>
...
        <scene sceneID="XZq-FU-Flr">
            <objects>
                <tableViewController title="Ingredients" id="Gdo-Tw-GNC" customClass="IngredientsTableViewController" customModule="RecipeRack" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="gkr-nn-IW1" userLabel="Ingredients">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vietnamese Rice Paper Rolls" translatesAutoresizingMaskIntoConstraints="NO" id="Ymi-7v-46Z">
                                <rect key="frame" x="20" y="64" width="374" height="274.33333333333331"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="View Ingredients"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                <rect key="frame" x="47" y="616" width="320" height="35"/>
                                <color key="backgroundColor" red="0.80511253238341962" green="0.030833942258791925" blue="0.036903029458682832" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="RecipeBookButton">
                                    <accessibilityTraits key="traits" button="YES"/>
                                </accessibility>
...
            <objects>
                <navigationController title="Navigation Controller Shopping Scene" id="x2i-2F-qJ0" userLabel="Navigation Shopping List" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="2" title="Shopping List" image="icons8-List-32" id="LHd-ao-XGD"/>
                    <navigationItem key="navigationItem" id="X87-D3-2Yo"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gFu-hi-aR0">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gjm-1I-wFe" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="icons8-Home Page-32" id="PKv-EV-lVs" userLabel="Home"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ar7-f7-ps7">
...
